--- a/css/style.production.css
+++ b/css/style.production.css
@@ -9,12 +9,14 @@ body {
 
 .page-header {
     display: flex;
-    width: 100%;
-    padding: 20px;
+    width: 90%;
+    padding: 50px;
 }
 
 .page-header__item{
     flex: 0 1 100px;
+    height: 80px;
+    width: 80px;
 }
 
 .page-header__item:last-child {
@@ -24,13 +26,16 @@ body {
 
 .navigation-list__item {
     font-size: 25px;
-    text-decoration: none;
+    text-decoration: underline;
     color: black;
+    text-align: center;
 }
 
 .navigation-list-li {
     display: inline-block;
     margin-left: 15px;
+    margin-top: 1px;
+    
 }
 
 .profile {
@@ -42,8 +47,9 @@ body {
     float: left;
     height: 150px;
     width: 150px;
-    margin-right: 30px;
+    margin-right: 40px;
     border-radius: 50%;
+   
 }
 
 .about-me {
@@ -223,7 +229,7 @@ textarea {
     animation: 20s cloud-move-reverse infinite alternate linear;
 }
 
-@media all and(max-width: 500px) {
+@media all and (max-width: 200px) {
     .grid {
 
      grid-template-columns: 1fr;
@@ -232,7 +238,7 @@ textarea {
     }
 }
 
-@media all and (min-wdit: 500px) and (max-width: 750px) {
+@media all and (min-wdit: 200px) and (max-width: 750px) {
     .grid {
         grid-template-columns: 1fr 1fr;
         overflow: scroll;
@@ -240,7 +246,7 @@ textarea {
     }
 }
 
-@media all and (max-width: 750) {
+@media all and(max-width: 750) {
     .grid {
         grid-gap: 15px;
         overflow: scroll;
@@ -256,9 +262,9 @@ textarea {
         font-size: 25px;
     }
 }
-
 .svg-animation {
     max-width: 750px;
     overflow: scroll;
     max-width: 95vw;
 }
+
